--- a/examples/markets/assets/assets_tutorial.ipynb
+++ b/examples/markets/assets/assets_tutorial.ipynb
@@ -21,23 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
    "id": "713cedfebca6c6f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T11:03:42.754323Z",
-     "start_time": "2025-02-27T11:03:42.752724Z"
+     "end_time": "2025-04-18T18:55:27.950555Z",
+     "start_time": "2025-04-18T18:55:27.945700Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working directory set to: /home/jose/code/MainSequenceClientSide/mainsequence-sdk\n"
-     ]
-    }
-   ],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -56,19 +46,27 @@
     "# Change the working directory to the target directory\n",
     "os.chdir(target_dir)\n",
     "print(\"Working directory set to:\", os.getcwd())"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working directory set to: /home/jose/code/MainSequenceClientSide/mainsequence-sdk\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
    "id": "405b0a22",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:44:39.738479Z",
-     "start_time": "2025-04-10T10:44:37.875245Z"
+     "end_time": "2025-04-18T18:55:29.863667Z",
+     "start_time": "2025-04-18T18:55:27.989474Z"
     }
    },
-   "outputs": [],
    "source": [
     "\n",
     "import dotenv\n",
@@ -82,7 +80,23 @@
     "BINANCE_EV = MARKETS_CONSTANTS.BINANCE_EV_SYMBOL\n",
     "BINANCE_FUTURES_EV = MARKETS_CONSTANTS.BINANCE_FUTURES_EV_SYMBOL\n",
     "ALPACA_EV = MARKETS_CONSTANTS.ALPACA_EV_SYMBOL"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T18:55:28.475649Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T18:55:28.821323Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T18:55:29.316405Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4182 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T18:55:29.317521Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T18:55:29.522544Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.2044 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/ts_manager/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T18:55:29.523848Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T18:55:29.861453Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3370 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -99,15 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "8f6338f5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:44:46.188826Z",
-     "start_time": "2025-04-10T10:44:42.321630Z"
+     "end_time": "2025-04-18T18:59:25.264817Z",
+     "start_time": "2025-04-18T18:59:21.313741Z"
     }
    },
-   "outputs": [],
    "source": [
     "top_100_cryptos = AssetCategory.get(unique_identifier=\"top_100_crypto_market_cap\")\n",
     "\n",
@@ -116,15 +128,27 @@
     "\n",
     "# Get them through the main sequence FIGI class and exchange\n",
     "binance_currency_pairs = AssetCurrencyPair.filter(\n",
-    "    base_asset__figi_details__main_sequence_share_class__in=[\n",
-    "        a.figi_details.main_sequence_share_class for a in spot_assets\n",
+    "    base_asset__main_sequence_share_class__in=[\n",
+    "        a.main_sequence_share_class for a in spot_assets\n",
     "    ],\n",
     "    execution_venue__symbol=MARKETS_CONSTANTS.BINANCE_EV_SYMBOL,\n",
-    "    quote_asset__symbol=\"USDT\",\n",
+    "    quote_asset__ticker=\"USDT\",\n",
     "    include_base_quote_detail=False\n",
     ")\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T18:59:21.789477Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4741 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T18:59:22.292491Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.5021 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T18:59:25.258980Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 2.9643 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset_currency_pair/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -138,40 +162,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "774acb7a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:44:52.113782Z",
-     "start_time": "2025-04-10T10:44:49.823237Z"
+     "end_time": "2025-04-18T18:59:54.710889Z",
+     "start_time": "2025-04-18T18:59:52.077335Z"
     }
    },
+   "source": [
+    "# Filtering Simple Assets\n",
+    "simple_assets = Asset.filter(ticker=\"BTCUSDT\")\n",
+    "print(f\"Total Spot Crypto Assets on Binance: {len(simple_assets)}\")\n",
+    "\n",
+    "# Filtering Futures\n",
+    "cash_equity_assets = AssetCurrencyPair.filter(ticker=\"BTCUSDT\")\n",
+    "print(f\"Total Assets CurrencyPair Assets : {len(cash_equity_assets)}\")\n",
+    "\n",
+    "# Filtering  Futures USDM Assets\n",
+    "futures_assets= AssetFutureUSDM.filter(ticker=\"BTCUSDT\")\n",
+    "print(f\"Total Futures Assets : {len(futures_assets)}\")\n",
+    "\n",
+    "\n"
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T18:59:53.083795Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 1.0051 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Spot Crypto Assets on Binance: 5\n",
-      "Total Assets CurrencyPair Assets : 3\n",
+      "Total Spot Crypto Assets on Binance: 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T18:59:53.918912Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.8338 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset_currency_pair/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Assets CurrencyPair Assets : 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T18:59:54.707231Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.7872 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset_future_usdm/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Total Futures Assets : 2\n"
      ]
     }
    ],
-   "source": [
-    "# Filtering Simple Assets\n",
-    "simple_assets = Asset.filter(symbol=\"BTCUSDT\")\n",
-    "print(f\"Total Spot Crypto Assets on Binance: {len(simple_assets)}\")\n",
-    "\n",
-    "# Filtering Futures\n",
-    "cash_equity_assets = AssetCurrencyPair.filter(symbol=\"BTCUSDT\")\n",
-    "print(f\"Total Assets CurrencyPair Assets : {len(cash_equity_assets)}\")\n",
-    "\n",
-    "# Filtering  Futures USDM Assets\n",
-    "futures_assets= AssetFutureUSDM.filter(symbol=\"BTCUSDT\")\n",
-    "print(f\"Total Futures Assets : {len(futures_assets)}\")\n",
-    "\n",
-    "\n"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -192,35 +249,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "70673bbb7dfd95a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T11:11:41.463594918Z",
-     "start_time": "2025-02-27T11:00:27.305070Z"
+     "end_time": "2025-04-18T19:00:01.820656Z",
+     "start_time": "2025-04-18T19:00:00.369848Z"
     }
    },
+   "source": [
+    "# Query Binance Spot assets with correct asset classes\n",
+    "all_btc_assets = Asset.filter_with_asset_class(ticker=\"BTCUSDT\")\n",
+    "\n",
+    "# Displaying asset information\n",
+    "for asset in all_btc_assets:\n",
+    "    print(f\"Asset: {asset.ticker},  Class: {type(asset).__name__}\")\n"
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:00:01.818058Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 1.4469 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/list_with_asset_class/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Asset: BTCUSDT,  Class: AssetCurrencyPair\n",
       "Asset: BTCUSDT,  Class: AssetCurrencyPair\n",
-      "Asset: BTCUSDT,  Class: AssetFutureUSDM\n",
       "Asset: BTCUSDT,  Class: AssetCurrencyPair\n",
+      "Asset: BTCUSDT,  Class: AssetFutureUSDM\n",
       "Asset: BTCUSDT,  Class: AssetFutureUSDM\n"
      ]
     }
    ],
-   "source": [
-    "# Query Binance Spot assets with correct asset classes\n",
-    "all_btc_assets = Asset.filter_with_asset_class(symbol=\"BTCUSDT\")\n",
-    "\n",
-    "# Displaying asset information\n",
-    "for asset in all_btc_assets:\n",
-    "    print(f\"Asset: {asset.symbol},  Class: {type(asset).__name__}\")\n"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -236,26 +300,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
    "id": "7f747286",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-18T19:00:21.201307Z",
+     "start_time": "2025-04-18T19:00:20.238394Z"
+    }
+   },
+   "source": [
+    "all_curreny_pairs_bitcoin= Asset.filter_with_asset_class(ticker=\"BTCUSDT\",\n",
+    "security_market_sector=MARKETS_CONSTANTS.FIGI_MARKET_SECTOR_CURNCY,\n",
+    "security_type=MARKETS_CONSTANTS.FIGI_SECURITY_TYPE_CRYPTO\n",
+    ")\n",
+    "\n",
+    "print(all_curreny_pairs_bitcoin)"
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:00:21.199286Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.9598 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/list_with_asset_class/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[AssetCurrencyPair: 192403, AssetCurrencyPair: 192404, AssetCurrencyPair: 200468]\n"
+      "[AssetCurrencyPair: BTCUSDT_ms_share_class_MSyq4PRl58KI, AssetCurrencyPair: BTCUSDT_bnce_xF5EceMkk2S4, AssetCurrencyPair: BTCUSDT_bnf8_29EIYV7huAXC]\n"
      ]
     }
    ],
-   "source": [
-    "all_curreny_pairs_bitcoin= Asset.filter_with_asset_class(symbol=\"BTCUSDT\",\n",
-    "figi_details__security_market_sector=MARKETS_CONSTANTS.FIGI_MARKET_SECTOR_CURNCY,\n",
-    "figi_details__security_type=MARKETS_CONSTANTS.FIGI_SECURITY_TYPE_CRYPTO\n",
-    ")\n",
-    "\n",
-    "print(all_curreny_pairs_bitcoin)"
-   ]
+   "execution_count": 12
   },
   {
    "cell_type": "code",
