asset category notebook finished

--- a/examples/markets/assets/asset_category_tutorial.ipynb
+++ b/examples/markets/assets/asset_category_tutorial.ipynb
@@ -17,14 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T11:23:17.343441Z",
-     "start_time": "2025-04-10T11:23:15.787651Z"
+     "end_time": "2025-04-18T19:01:12.968538Z",
+     "start_time": "2025-04-18T19:01:11.467084Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "import dotenv\n",
@@ -35,7 +33,21 @@
     "from mainsequence.client import Asset, AssetCategory\n",
     "from mainsequence.client import CONSTANTS\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:01:11.943404Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T19:01:12.266298Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T19:01:12.761563Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4205 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/pods/projects/get_user_default_project/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T19:01:12.762667Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mGetting Auth Headers ASSETS_ORM\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:39 in refresh_headers())\n",
+      "\u001B[2m2025-04-18T19:01:12.966538Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.2033 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/ts_manager/api/constants\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -46,27 +58,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T11:23:20.235808Z",
-     "start_time": "2025-04-10T11:23:19.375513Z"
+     "end_time": "2025-04-18T19:01:30.630199Z",
+     "start_time": "2025-04-18T19:01:29.707733Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Select specific crypto assets from Binance\n",
     "crypto_symbols = [\"BTCUSDT\", \"ETHUSDT\", \"SOLUSDT\"]\n",
-    "binance_crypto_assets = Asset.filter(symbol__in=crypto_symbols, execution_venue__symbol=CONSTANTS.BINANCE_EV_SYMBOL) \n",
+    "binance_crypto_assets = Asset.filter(ticker__in=crypto_symbols, execution_venue__symbol=CONSTANTS.BINANCE_EV_SYMBOL)\n",
     "\n",
     "# Select specific US stock assets from Alpaca\n",
     "stock_symbols = [\"AAPL\", \"TSLA\", \"MSFT\"]\n",
-    "alpaca_us_stocks =Asset.filter(symbol__in=stock_symbols, execution_venue__symbol=CONSTANTS.ALPACA_EV_SYMBOL) \n",
+    "alpaca_us_stocks =Asset.filter(ticker__in=stock_symbols, execution_venue__symbol=CONSTANTS.ALPACA_EV_SYMBOL)\n",
     "\n",
     "# Extract asset IDs\n",
     "crypto_asset_ids = [asset.id for asset in binance_crypto_assets]\n",
     "stock_asset_ids = [asset.id for asset in alpaca_us_stocks]"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:01:30.166217Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4567 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T19:01:30.628316Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4597 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -89,39 +110,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:15:24.662078Z",
-     "start_time": "2025-04-10T10:09:52.138910Z"
+     "end_time": "2025-04-18T19:01:35.966072Z",
+     "start_time": "2025-04-18T19:01:35.285714Z"
     }
    },
-   "outputs": [],
    "source": [
     "from mainsequence.client import User\n",
     "#get authenticated user to extract its organization and query if the categories already exists\n",
     "user=User.get_authenticated_user_details()\n",
     "org_uid = user.organization.uid  # "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-10T10:16:01.011077Z",
-     "start_time": "2025-04-10T10:16:00.180770Z"
-    }
-   },
+   ],
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Created Categories: Crypto: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n"
+      "\u001B[2m2025-04-18T19:01:35.964365Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6771 seconds. Requesting GET from http://127.0.0.1:8000/user/api/user/get_user_details/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
      ]
     }
    ],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-18T19:01:42.910279Z",
+     "start_time": "2025-04-18T19:01:42.132118Z"
+    }
+   },
    "source": [
     "# Check if the \"Favorite Crypto\" category exists\n",
     "crypto_asset_ids = []\n",
@@ -131,26 +150,34 @@
     "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
     "else:\n",
     "    crypto_category=crypto_category[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:14.977530Z",
-     "start_time": "2025-02-27T13:00:14.669202Z"
-    }
-   },
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:01:42.466141Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.3326 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T19:01:42.907789Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4407 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Categories: Crypto: orm_class='AssetCategory' id=458 unique_id='1a3dca4d-f5eb-439c-9522-cb6ff9c962fd' name='Favorite Crypto' source='user_defined' assets=[11440, 12419, 11439] organization_owner_uid='00000000-0000-0000-0000-000000000001'\n"
+      "Created Categories: Crypto: orm_class='AssetCategory' id=9 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n"
      ]
     }
    ],
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-18T19:01:56.051997Z",
+     "start_time": "2025-04-18T19:01:55.071239Z"
+    }
+   },
    "source": [
     "\n",
     "# Check if the \"Favorite US Stocks\" category exists\n",
@@ -161,7 +188,17 @@
     "else:\n",
     "    stocks_category=stocks_category[0]\n",
     "    \n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:01:56.049919Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.9774 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -184,26 +221,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:19:31.347404Z",
-     "start_time": "2025-04-10T10:19:30.396899Z"
+     "end_time": "2025-04-18T19:02:03.066916Z",
+     "start_time": "2025-04-18T19:02:02.037754Z"
     }
    },
+   "source": [
+    "existing_categories = AssetCategory.filter()\n",
+    "print(f\"Existing Categories: {existing_categories}\")"
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:02:03.064721Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 1.0261 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset-category/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Existing Categories: [Magnificent 7 Alpaca source: user_defined, 7 assets, MAGNIFICENT 7 source: mainsequence, 7 assets, S&P500 Constitutents source: datahub.io, 472 assets, Top 10 Crypto Market Cap source: coingecko, 10 assets, Top 50 Crypto Market Cap source: coingecko, 50 assets, Top 100 Crypto Market Cap source: coingecko, 100 assets, Top 100 Crypto Market Cap_BINANCE source: coingecko, 92 assets, Favorite Crypto source: user_defined, 0 assets]\n"
+      "Existing Categories: [MAGNIFICENT 7 source: mainsequence, 7 assets, S&P500 Constitutents source: datahub.io, 472 assets, Top 10 US Equity Market Cap source: polygon, 10 assets, Top 50 US Equity Market Cap source: polygon, 50 assets, Top 100 US Equity Market Cap source: polygon, 100 assets, Top 10 Crypto Market Cap source: coingecko, 10 assets, Top 50 Crypto Market Cap source: coingecko, 50 assets, Top 100 Crypto Market Cap source: coingecko, 100 assets, Favorite Crypto source: user_defined, 0 assets]\n"
      ]
     }
    ],
-   "source": [
-    "existing_categories = AssetCategory.filter()\n",
-    "print(f\"Existing Categories: {existing_categories}\")"
-   ]
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -214,36 +258,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-10T10:19:46.064684Z",
-     "start_time": "2025-04-10T10:19:44.956697Z"
+     "end_time": "2025-04-18T19:02:14.531068Z",
+     "start_time": "2025-04-18T19:02:13.420903Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated Crypto Category: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[193084] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
-      "[193084]\n"
-     ]
-    }
-   ],
    "source": [
     "# Fetch additional assets (for example, adding ADAUSDT)\n",
-    "new_crypto_asset = Asset.filter(symbol=\"ADAUSDT\", execution_venue__symbol=CONSTANTS.BINANCE_EV_SYMBOL)\n",
+    "new_crypto_asset = Asset.filter(ticker=\"ADAUSDT\", execution_venue__symbol=CONSTANTS.BINANCE_EV_SYMBOL)\n",
     "\n",
     "# Extend existing category with new asset\n",
     "crypto_category=crypto_category.append_assets(asset_ids=[new_crypto_asset[0].id])\n",
-    "                              \n",
-    "                            \n",
     "\n",
     "\n",
     "print(f\"Updated Crypto Category: {crypto_category}\")\n",
     "print(crypto_category.assets)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:02:13.916172Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4941 seconds. Requesting GET from http://127.0.0.1:8000/orm/api/assets/asset/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n",
+      "\u001B[2m2025-04-18T19:02:14.528510Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.6113 seconds. Requesting POST from http://127.0.0.1:8000/orm/api/assets/asset-category/9/append-assets/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Crypto Category: orm_class='AssetCategory' id=9 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[23812] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
+      "[23812]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -254,14 +304,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T13:00:16.271288Z",
-     "start_time": "2025-02-27T13:00:16.160139Z"
+     "end_time": "2025-04-18T19:02:23.413048Z",
+     "start_time": "2025-04-18T19:02:22.929844Z"
     }
    },
+   "source": [
+    "stocks_category.delete()\n",
+    "print(f\"Deleted category: Favorite US Stocks\")"
+   ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[2m2025-04-18T19:02:23.411160Z\u001B[0m [\u001B[32m\u001B[1mdebug    \u001B[0m] \u001B[1mtook 0.4801 seconds. Requesting DELETE from http://127.0.0.1:8000/orm/api/assets/asset-category/2/\u001B[0m \u001B[36mapplication_name\u001B[0m=\u001B[35mms-sdk\u001B[0m \u001B[36mdata_source_id\u001B[0m=\u001B[35m1\u001B[0m \u001B[36mjob_run_id\u001B[0m=\u001B[35mNone\u001B[0m \u001B[36mproject_id\u001B[0m=\u001B[35m1\u001B[0m (at utils.py:95 in make_request())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -270,10 +330,7 @@
      ]
     }
    ],
-   "source": [
-    "stocks_category.delete()\n",
-    "print(f\"Deleted category: Favorite US Stocks\")"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
